ingress-https.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: demo-ingress
  annotations:
    ingress.kubernetes.io/rewrite-target: /
spec:
  tls:  
  - hosts:
      - my.clickoncloud.in
    secretName: ssl-secrect

  rules:
  - host: my.clickoncloud.in
    http:
      paths:
      - backend:
          serviceName: node-app
          servicePort: 80
